--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/corner.css">
-    <title>Task-List</title>
+    <title>Task-To-Do</title>
 
 </head>
 
